--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food shop</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="preety-girl">
+        <div class="first">
+            <h1> <span class="orange-color">Skip</span> The diet, Just eat healthy  With Food Nertwork </h1>
+            <h3>Imagine you don't need a diet because we provide 
+
+                healthy and delicious food for you</h3>
+            <a target="_blank" href="https://www.foodpanda.com.bd/">Order Now</a>
+        </div>
+        <div class="first">
+            <img src="food ficture/images/female/Group 8425.png" alt="">
+        </div>
+    </section>
+    <section class="owner-girl">
+        <div class="first">
+            <img src="food ficture/images/female/6667872_preview-removebg-preview.png" alt="">
+        </div >
+        <div class="first">
+            <h1>About me</h1>
+            <h4>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                elit. Condimentum diam orci pretium a pharetra, 
+                feugiat cursus. Dictumst risus, sem egestas odio cras 
+                adipiscing vulputate. Nisi, risus in suscipit non. Non 
+                commodo volutpat, pharetra, vel</h4>
+                <a target="_blank" href="https://www.bing.com/search?q=Delivery+Hero&FORM=SNAPST&filters=sid:%22b49e5e6f-57f8-4eb4-a29f-693816b28520%22">Contect me</a>
+        </div>
+    </section>
     
 </body>
 </html>
